--- a/rafa.css
+++ b/rafa.css
@@ -166,7 +166,7 @@ fieldset input{
 .container-right > div:nth-child(1){
     width: 100%;
     height: 25%;
-    background-color: #383838;
+    /* background-color: #383838; */
 }
 .container-right > div:nth-child(2){
     width: 100%;
